Fix #1842; divider rendering/alignment (#2107)

--- a/src/App.css
+++ b/src/App.css
@@ -2449,7 +2449,7 @@ code,
 }
 
 .child-divider {
-  margin-left: -125px;
+  margin-left: -16px;
 }
 
 .child-divider .drop-hover {
